--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,131 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="36dp"
+        android:text="Rock, Paper or Scissors"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="36sp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
+    <LinearLayout
+        android:id="@+id/choice_layout"
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        android:baselineAligned="false"
+        android:paddingHorizontal="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/result_text">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/player_choice_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/player_choice_text"
+                app:srcCompat="@mipmap/none" />
+
+            <TextView
+                android:id="@+id/player_choice_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Player move"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="0dp" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/game_choice_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/game_choice_text"
+                app:srcCompat="@mipmap/none" />
+
+            <TextView
+                android:id="@+id/game_choice_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Game move"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="0dp" />
+
+        </android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="211dp"
+        android:layout_marginBottom="8dp"
+        android:padding="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+
+        <ImageButton
+            android:id="@+id/rock_button"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:contentDescription="Rock"
+            android:onClick="playRoshambo"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/rock_button" />
+
+        <ImageButton
+            android:id="@+id/paper_button"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:contentDescription="Paper"
+            android:onClick="playRoshambo"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/paper_button" />
+
+        <ImageButton
+            android:id="@+id/scissors_button"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:contentDescription="Scissors"
+            android:onClick="playRoshambo"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/scissor_button" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
